[metadata]
name = dreamkit
description = Toolkit for creating art with StableDiffusion
author = Jacob van Gogh
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    dreamkit
install_requires =
    diffusers
    tqdm
    moviepy
python_requires = >=3.6
zip_safe = no
